# speca

./: .gitattributes  .gitignore  .mcp.json  CALLGRAPH_IMPLEMENTATION.md  CLAUDE.md  HACKING_GUIDELINE.md  IMPLEMENTATION_GUIDE_V2.md  LICENSE  Makefile  OPTIMIZATION_NOTES.md  PHASE_02C_IMPROVEMENT_GUIDE.md  README.md  auto_label_quality_assessment.md  changelog-ja.md  changelog.md  get_fulu_issues.sh  get_github_issues.sh  proposal.md  proposal_jp.md  pyproject.toml  run_local.sh  run_local_audit.sh  setup.sh
.claude/: launch.json  settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
automation/: AUDIT_PLAYBOOK.md
benchmarks/: Dockerfile  README.md  bench_utils.py  evaluate.py  generate_report.py  human_labels_template.jsonl  sherlock_compare.py
cli/: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v0.9.1.md  RELEASE_NOTES_v1.0.0.md  TESTING.md  package-lock.json  package.json  stryker.conf.json  tsconfig.json  vitest.config.ts
csv/: README.md  code4rena_high_medium.csv  defi_all_high_medium.csv  lending_high_valid.csv  past_defi_patterns.csv  past_defi_patterns_round2.csv  past_defi_patterns_round3_codehawks.csv  past_defi_patterns_round3_sherlock.csv  sherlock_high_medium.csv
docs/: CLAUDE_CACHE_STRATEGY.md  ETHEREUM_FULL_AUDIT_TASK.md  LOCAL_VERIFICATION_GUIDE.md  PHASE_B_DESIGN.md  SPECA_CLI_SPEC.md  V3_NOTES.md
homepage/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
outputs/: 00_bounty_guideline.md  01_SPEC.json  01a_STATE.json  01b_ASYNC_QUEUE_W0B0_1774101259.json  01b_ASYNC_QUEUE_W1B1_1774101260.json  01b_ASYNC_QUEUE_W2B2_1774101260.json  01b_ASYNC_QUEUE_W3B3_1774101260.json  01b_CONTEXT_W0B0_1774101259.json  01b_CONTEXT_W1B1_1774101260.json  01b_CONTEXT_W2B2_1774101260.json  01b_CONTEXT_W3B3_1774101260.json  01b_PARTIAL_W0B0_1774101560.json  01b_SUBGRAPH_INDEX.json  01e_ASYNC_QUEUE_W0B0_1774101867.json  01e_CONTEXT_W0B0_1774101867.json  01e_PARTIAL_W0B0_1774102087.json  02c_ASYNC_QUEUE_W0B0_1774102096.json  02c_CONTEXT_W0B0_1774102096.json  02c_PARTIAL_W0B0_1774102663.json  03_ASYNC_QUEUE_W0B0_1774102676.json  03_ASYNC_QUEUE_W0B0_1774190623.json  03_ASYNC_QUEUE_W0B0_1774190863.json  03_ASYNC_QUEUE_W0B12_1774102791.json  03_ASYNC_QUEUE_W0B12_1774190685.json  03_ASYNC_QUEUE_W0B12_1774190920.json  03_ASYNC_QUEUE_W0B16_1774102884.json  03_ASYNC_QUEUE_W0B16_1774190705.json  03_ASYNC_QUEUE_W0B16_1774190939.json  03_ASYNC_QUEUE_W0B20_1774102936.json  03_ASYNC_QUEUE_W0B20_1774190724.json  03_ASYNC_QUEUE_W0B24_1774102992.json  03_ASYNC_QUEUE_W0B24_1774190744.json  03_ASYNC_QUEUE_W0B28_1774103057.json  03_ASYNC_QUEUE_W0B28_1774190763.json  03_ASYNC_QUEUE_W0B32_1774103101.json  03_ASYNC_QUEUE_W0B32_1774190782.json  03_ASYNC_QUEUE_W0B36_1774103170.json  03_ASYNC_QUEUE_W0B36_1774190801.json  (+214 more)
server/: app.py  (+5 more)
(+5672 files in other folders)
