[project]
name = "security-agent"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=23.0,<25.0",
  "fastapi>=0.100",
  "pydantic>=2.0",
  "sweagent @ git+https://github.com/SWE-agent/SWE-agent.git@v1.0.1",
  "tqdm>=4.60,<5.0",
  "httpx>=0.24",
  "uvicorn[standard]>=0.20",
]

[dependency-groups]
dev = [
  "pytest>=7.0",
]
benchmark = [
  "matplotlib>=3.7",
  "numpy>=1.24",
]
# Used by scripts/datasets/* (build_derived, publish_hf, load helper) and
# any consumer that loads from the NyxFoundation HF org. Install with
# `uv sync --group datasets`.
datasets = [
  "huggingface_hub>=0.20",
  "datasets>=2.16",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "jinja2>=3.0",
]
